# fatx-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  install.sh  setup.sh
.agent/: agent.sh
.claude/rules/: file-hygiene.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-04-08-performance-reliability-optimization.md
docs/prd/: 2026-04-08-performance-reliability-optimization.md
fatx-mount/: Cargo.toml
fatx-mount/src/: disk_watcher.rs  main.rs
fatxlib/: Cargo.toml
fatxlib/src/: error.rs  lib.rs  partition.rs  platform.rs  types.rs  volume.rs
fatxlib/tests/: TESTING.md  fixture_test.rs  integration.rs  optimization.rs
fatxlib/tests/common/: mod.rs
src/: main.rs  mkimage.rs  tui.rs
src/mount/: mod.rs
tests/: cli_integration.rs
